try upload form

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html>
 <head>
   <% include ../partials/header.ejs %>
@@ -9,7 +9,7 @@
   <% include ../partials/nav.ejs %>
 
 <div>
-    <b>Upload your profile picture</b>
+  <button onclick="window.location='/upload'">Upload your profile picture!</button>    
 </div>
 
 
